--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,236 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  color: var(--text-color, #F1B2CE);
+  font-family: var(--font-family, sans-serif);
+  font-size: var(--font-size, 18px);
+  background-image: var(--background-image);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title {
+  font-size: var(--font-size, 18px);
+  font-weight: var(--font-bold);
+  line-height: var(--line-height);
+  color: var(--title-color);
+}
+
+.title-decor {
+  color: var(--title-decor-color);
+  background-color: var(--title-decor-bg-color);
+}
+
+.page-title {
+  font-size: var(--title-size-desktop, 157px);
+  color: var(--header-title-color, #DB00FF);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 82.5%;
+  margin-left: -20px;
+}
+
+.text-regular {
+  font-weight: var(--font-regular, 400);
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color, #FF0070);
+}
+
+.link:hover {
+  border-bottom: 1px solid var(--text-color, #F1B2CE);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--text-color, #F1B2CE);;
+}
+
+.section {
+  padding: 40px 20px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: clamp(236px, calc(100% / 3.12), 315px) 1fr;
+}
+
+.section__list-item {
+  margin-bottom: 20px;
+}
+
+.section__list-item:last-of-type {
+  margin-bottom: 0;
+}
+
+.section__text {
+  margin-top: 10px;
+  line-height: var(--line-height);
+}
+
+.bulb {
+  position: absolute;
+  display: var(--display);
+  gap: 10px;
+  align-items: center;
+  inset-inline-end: 30px;
+  inset-block-start: 20px;
+}
+
+.bulb::before {
+  content: "REC";
+  color: var(--accent-color, #FF0070);
+  line-height: 25px;
+}
+
+.bulb::after {
+  content: "";
+  display: block;
+  inline-size: 9px;
+  block-size: 9px;
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px rgb(255, 0, 112);
+  background: var(--accent-color, #FF0070);
+}
+
+.decorated-zone {
+  position: relative;
+  block-size: 100vh;
+  min-height: 768px;
+}
+
+.decorated-zone::before {
+  position: absolute;
+  content: '';
+  border-top: 1px solid var(--decoration-rectangle-color);
+  border-right: 1px solid var(--decoration-rectangle-color);
+  inline-size: 25px;
+  block-size: 25px;
+  inset-block-start: 20px;
+  inset-inline-end: 20px;
+}
+
+.decorated-zone::after {
+  position: absolute;
+  content: '';
+  border-bottom: 1px solid var(--decoration-rectangle-color);
+  border-left: 1px solid var(--decoration-rectangle-color);
+  inline-size: 25px;
+  block-size: 25px;
+  inset-inline-start: 20px;
+  inset-block-end: 20px;
+}
+
+.header {
+  padding: 20px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+}
+
+.header__theme-menu {
+  align-self: start;
+  justify-self: center;
+}
+
+.header__theme-menu-button {
+  cursor: pointer;
+  border: 0;
+  padding: 0 13px;
+  color: var(--font-color, #FF0070);
+  background-color: transparent;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--button-outline-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--font-color);
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--font-color, #FF0070);
+  pointer-events: none;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  gap: 10px;
+}
+
+.header__text {
+  justify-self: end;
+  max-inline-size: 491px;
+}
+
+.section-why {
+  padding-top: 60px;
+}
+
+.section-how {
+  grid-template-columns: 1fr;
+}
+
+.section-how__title {
+  max-inline-size: 314px;
+}
+
+.section-how__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.gallery {
+  padding: 40px 20px 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.gallery__list {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.gallery__list-item:first-child,
+.gallery__list-item:last-child {
+  grid-column-start: span 2;
+}
+
+.gallery__list-item:nth-child(2),
+.gallery__list-item:nth-child(3) {
+  grid-row-start: span 2;
+}
+
+.gallery__list-item-img {
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.footer {
+  padding: 20px;
+  display: grid;
+}
+
+.footer__title {
+  justify-self: center;
+  align-self: center;
+  text-shadow: 2px 2px 0 var(--accent-color);
+  margin: 0;
 }
