--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,7 +14,7 @@
   --link-focus-color: var(--text-color);
   --font-family: 'IBM Plex Mono';
   --font-size: 18px;
-  --line-height: 23.4px;
+  --line-height: 130%;
   --title-color: var(--accent-color);
   --title-size-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --title-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
