--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,6 +5,7 @@
 :root {
   --font-color: #FF0070;
   --background-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
   --accent-color: var(--font-color);
   --title-decor-color: #000028;
   --title-decor-bg-color: var(--font-color);
